updated cmip6 results

--- a/cmipPrecTsMonthly.ipynb
+++ b/cmipPrecTsMonthly.ipynb
@@ -115,21 +115,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['EC-Earth-Consortium' 'EC-Earth3-Veg' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esg-dn1.nsc.liu.se downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.pr.gr.v20200225|esgf-data3.ceda.ac.uk downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esgf-data3.diasjp.net downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esgf-data1.llnl.gov downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esgf3.dkrz.de downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esg-dn1.nsc.liu.se downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esgf.nci.org.au downloading\n",
-      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3-Veg.ssp585.r1i1p1f1.Amon.tas.gr.v20200225|esgf-data3.ceda.ac.uk downloading\n",
       "['EC-Earth-Consortium' 'EC-Earth3-Veg-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.pr.gr.v20200213|esgf-data3.diasjp.net downloading\n"
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.tas.gr.v20200213|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.tas.gr.v20200213|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.tas.gr.v20200213|esg-dn1.nsc.liu.se downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.tas.gr.v20200213|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.pr.gr.v20200217|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.pr.gr.v20200217|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.pr.gr.v20200217|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.pr.gr.v20200217|esg-dn1.nsc.liu.se downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.pr.gr.v20200217|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.historical.r1i1p1f1.Amon.tas.gr.v20200217|esgf-data3.diasjp.net downloading\n"
      ]
     }
    ],
