--- a/tests/testCmip6Dates.ipynb
+++ b/tests/testCmip6Dates.ipynb
@@ -41,7 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "id": "8018dc52-07fe-4c89-adf5-08d2b5ab276e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "b06d28f3-08e7-462f-88fc-799662df1c89",
    "metadata": {},
    "outputs": [],
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "19ff8de8-255e-445c-91fd-ae76357c3e25",
    "metadata": {},
    "outputs": [],
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "88772243-39f6-421f-af92-965cf2e54992",
    "metadata": {},
    "outputs": [
@@ -77,130 +88,45 @@
       "3['BCC' 'BCC-CSM2-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
       "4['CAMS' 'CAMS-CSM1-0' 'r1i1p1f1' 'r1i1p1f1']\n",
       "5['CAS' 'CAS-ESM2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "6['NCAR' 'CESM2' 'r1i1p1f1' 'r10i1p1f1']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7['NCAR' 'CESM2-WACCM' 'r1i1p1f1' 'r1i1p1f1']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/home/steketea/anaconda3/envs/testEnv/lib/python3.9/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "6['NCAR' 'CESM2' 'r1i1p1f1' 'r10i1p1f1']\n",
+      "7['NCAR' 'CESM2-WACCM' 'r1i1p1f1' 'r1i1p1f1']\n",
       "8['THU' 'CIESM' 'r1i1p1f1' 'r1i1p1f1']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/CIESM_ssp370.nc'\n",
       "9['CMCC' 'CMCC-CM2-SR5' 'r1i1p1f1' 'r1i1p1f1']\n",
       "10['CMCC' 'CMCC-ESM2' 'r1i1p1f1' 'r1i1p1f1']\n",
       "11['CNRM-CERFACS' 'CNRM-CM6-1' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "12['CNRM-CERFACS' 'CNRM-CM6-1-HR' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "piControl too short\n",
-      "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/CNRM-CM6-1-HR_ssp370.nc'\n",
-      "13['CNRM-CERFACS' 'CNRM-ESM2-1' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "14['CCCma' 'CanESM5' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "15['CCCma' 'CanESM5-CanOE' 'r1i1p2f1' 'r1i1p2f1']\n",
-      "16['EC-Earth-Consortium' 'EC-Earth3' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "17['EC-Earth-Consortium' 'EC-Earth3-CC' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "12['CNRM-CERFACS' 'CNRM-ESM2-1' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "13['CCCma' 'CanESM5' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "14['CCCma' 'CanESM5-CanOE' 'r1i1p2f1' 'r1i1p2f1']\n",
+      "15['EC-Earth-Consortium' 'EC-Earth3' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "16['EC-Earth-Consortium' 'EC-Earth3-CC' 'r1i1p1f1' 'r1i1p1f1']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/EC-Earth3-CC_ssp126.nc'\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/EC-Earth3-CC_ssp370.nc'\n",
-      "18['EC-Earth-Consortium' 'EC-Earth3-Veg' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "17['EC-Earth-Consortium' 'EC-Earth3-Veg' 'r1i1p1f1' 'r1i1p1f1']\n",
       "noMatchhistoricalts_Amon\n",
       "[1850, 2014, 1851, 2014]\n",
-      "19['EC-Earth-Consortium' 'EC-Earth3-Veg-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "20['FIO-QLNM' 'FIO-ESM-2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "18['EC-Earth-Consortium' 'EC-Earth3-Veg-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "19['FIO-QLNM' 'FIO-ESM-2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/FIO-ESM-2-0_ssp370.nc'\n",
-      "21['NOAA-GFDL' 'GFDL-CM4' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "20['NOAA-GFDL' 'GFDL-CM4' 'r1i1p1f1' 'r1i1p1f1']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/GFDL-CM4_ssp126.nc'\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/GFDL-CM4_ssp370.nc'\n",
-      "22['NOAA-GFDL' 'GFDL-ESM4' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "23['NASA-GISS' 'GISS-E2-1-G' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "21['NOAA-GFDL' 'GFDL-ESM4' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "22['NASA-GISS' 'GISS-E2-1-G' 'r1i1p1f2' 'r1i1p1f2']\n",
       "piControl too short\n",
-      "24['MOHC' 'HadGEM3-GC31-LL' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "[7550, 7894, 7550, 7894]\n",
+      "piControl too short\n",
+      "[7550, 7894, 7550, 7894]\n",
+      "23['MOHC' 'HadGEM3-GC31-LL' 'r1i1p1f1' 'r1i1p1f3']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/HadGEM3-GC31-LL_ssp370.nc'\n",
-      "25['MOHC' 'HadGEM3-GC31-MM' 'r1i1p1f1' 'r1i1p1f3']\n",
+      "24['MOHC' 'HadGEM3-GC31-MM' 'r1i1p1f1' 'r1i1p1f3']\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/HadGEM3-GC31-MM_ssp245.nc'\n",
       "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/HadGEM3-GC31-MM_ssp370.nc'\n",
-      "26['INM' 'INM-CM4-8' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "noMatchpiControlts_Amon\n",
-      "[1850, 2380, 1850, 2363]\n",
-      "27['INM' 'INM-CM5-0' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "28['IPSL' 'IPSL-CM6A-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "29['NIMS-KMA' 'KACE-1-0-G' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "piControl too short\n",
-      "30['KIOST' 'KIOST-ESM' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/KIOST-ESM_ssp370.nc'\n",
-      "31['UA' 'MCM-UA-1-0' 'r1i1p1f1' 'r1i1p1f2']\n",
-      "32['MIROC' 'MIROC-ES2L' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "33['MIROC' 'MIROC6' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "34['MPI-M' 'MPI-ESM1-2-HR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "35['MPI-M' 'MPI-ESM1-2-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "36['MRI' 'MRI-ESM2-0' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "37['NUIST' 'NESM3' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "[Errno 2] No such file or directory: b'/home/steketea/compound/results/cmipWarmSeasonIndeces/NESM3_ssp370.nc'\n",
-      "38['NCC' 'NorESM2-LM' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "39['NCC' 'NorESM2-MM' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "40['MOHC' 'UKESM1-0-LL' 'r1i1p1f2' 'r1i1p1f2']\n"
+      "25['INM' 'INM-CM4-8' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "26['INM' 'INM-CM5-0' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "27['IPSL' 'IPSL-CM6A-LR' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "28['NIMS-KMA' 'KACE-1-0-G' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "29['KIOST' 'KIOST-ESM' 'r1i1p1f1' 'r1i1p1f1']\n"
      ]
     }
    ],
@@ -245,7 +171,7 @@
     "                    print('noMatch' + experiment + variable)\n",
     "                    print([*calc, *source])\n",
     "                if all(\n",
-    "                [calc[1]-calc[0]<498, \n",
+    "                [calc[1]-calc[0]<400, \n",
     "                 experiment=='piControl']\n",
     "                ):\n",
     "                    print('piControl too short')\n",
