--- a/tests/testDownloads.ipynb
+++ b/tests/testDownloads.ipynb
@@ -40,9 +40,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMIP6.CMIP.INM.INM-CM4-8.piControl.r1i1p1f1.Amon.ts.gr1.v20190605|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.INM.INM-CM4-8.piControl.r1i1p1f1.Amon.ts.gr1.v20190605|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.INM.INM-CM4-8.piControl.r1i1p1f1.Amon.ts.gr1.v20190605|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.INM.INM-CM4-8.piControl.r1i1p1f1.Amon.ts.gr1.v20190605|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.INM.INM-CM4-8.piControl.r1i1p1f1.Amon.ts.gr1.v20190605|esgf-data3.ceda.ac.uk downloading\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "esgfClient.esgfDownloader('INM-CM4-8','ts_Amon', 'piControl','r1i1p1f1')"
    ]
@@ -80,19 +102,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.pr.gr.v20200213|esgf-data3.diasjp.net downloading\n"
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.ts.gr.v20200213|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.ts.gr.v20200213|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.ts.gr.v20200213|esg-dn1.nsc.liu.se downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3-Veg-LR.piControl.r1i1p1f1.Amon.ts.gr.v20200213|esgf-data3.ceda.ac.uk downloading\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "esgfClient.esgfDownloader('EC-Earth3-Veg-LR','pr_Amon', 'piControl','r1i1p1f1')"
+    "esgfClient.esgfDownloader('EC-Earth3-Veg-LR','ts_Amon', 'piControl','r1i1p1f1')"
    ]
   },
   {
