fixed the ec index calc

--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -37,14 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sstAnoms(iModel):\n",
+    "def sstAnoms(tsXr):\n",
     "    \n",
-    "    tsXr = xarray.concat([fh.loadModelData(iModel[1], 'tas_Amon', 'historical', 'r1i1p1f1',# iModel[3], \n",
-    "                                               chunks={'time':120}).tas, \n",
-    "                              fh.loadModelData(iModel[1], 'tas_Amon', 'ssp585','r1i1p1f1',# iModel[3], \n",
-    "                                               chunks={'time':120}).tas], \n",
-    "                             dim='time')\n",
-    "\n",
     "    tsXr=tsXr.where(\n",
     "        (tsXr.lat>=-15) & (tsXr.lat<=15) &\n",
     "        (tsXr.lon>=140) & (tsXr.lon<=280),\n",
@@ -53,12 +47,12 @@
     "    \n",
     "    tsXr=tsXr.where(\n",
     "        (tsXr.time.dt.year>=1900) * (tsXr.time.dt.year<2100), \n",
-    "        drop=True\n",
-    "    )\n",
+    "        drop=True)\n",
     "\n",
     "    trendXr = tsXr.polyfit('time', 2)\n",
     "    \n",
     "    trendXr = xarray.polyval(tsXr.time, trendXr.polyfit_coefficients, 'degree')\n",
+    "    \n",
     "    detrendXr=tsXr-trendXr\n",
     "    \n",
     "    sstMeanXr=detrendXr.where((detrendXr.time.dt.year>=1900) * (detrendXr.time.dt.year<2000), \n",
@@ -77,9 +71,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solver(iModel): \n",
+    "def eofSolver(tsXr): \n",
     "    \n",
-    "    sstAnomXr = sstAnoms(iModel)\n",
+    "    sstAnomXr=sstAnoms(tsXr)\n",
     "    \n",
     "    sstAnomXr.load()\n",
     "    \n",
@@ -96,30 +90,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ecIndex(solver):\n",
+    "def ecIndex(tsXr):\n",
+    "    \n",
+    "    solver=eofSolver(tsXr)\n",
+    "    \n",
     "    import numpy.polynomial as poly\n",
-    "    pcTimeXr=solver.pcs(pcscaling=1,\n",
-    "        npcs=2)\n",
+    "    pcTimeXr=solver.pcs(npcs=2, pcscaling=1)\n",
     "    \n",
     "    djfTimeXr=pcTimeXr.where((pcTimeXr.time.dt.month==12)+(\n",
     "        pcTimeXr.time.dt.month==1)+(pcTimeXr.time.dt.month==2), drop=True)\n",
     "    \n",
-    "    pc1 = djfTimeXr.sel(mode=0)\n",
-    "    pc2 = djfTimeXr.sel(mode=1)\n",
+    "    pc1 = pcTimeXr.sel(mode=0)\n",
+    "    pc2 = pcTimeXr.sel(mode=1)\n",
     "    \n",
     "    pFit = poly.Polynomial.fit(pc1, pc2, 2)\n",
     "    alpha = pFit.convert().coef[2]\n",
     "    \n",
-    "    eofsXr = solver.eofs(neofs=2)\n",
+    "    eofsXr = solver.eofsAsCorrelation()\n",
     "    \n",
     "    if alpha >0:\n",
+    "        pc1=pc1*-1\n",
     "        pc2 = pc2*-1\n",
     "        pFit = poly.Polynomial.fit(pc1, pc2, 2)\n",
     "        alpha = pFit.convert().coef[2]\n",
-    "        pcTimeXr = xarray.concat([pcTimeXr.sel(mode=0), \n",
+    "        pcTimeXr = xarray.concat([-1*pcTimeXr.sel(mode=0), \n",
     "                               -1*pcTimeXr.sel(mode=1)], \n",
     "                               'mode')\n",
-    "        eofsXr = xarray.concat([eofsXr.sel(mode=0), \n",
+    "        eofsXr = xarray.concat([-1*eofsXr.sel(mode=0), \n",
     "                               -1*eofsXr.sel(mode=1)], \n",
     "                               'mode')\n",
     "        \n",
@@ -143,6 +140,7 @@
    "outputs": [],
    "source": [
     "def ensoPlotter(da, ax):\n",
+    "    import cartopy.crs as ccrs\n",
     "    import cartopy.feature as cfeature\n",
     "    import matplotlib.pyplot as plt \n",
     "    \n",
