--- a/tests/testCmip6Dates.ipynb
+++ b/tests/testCmip6Dates.ipynb
@@ -311,7 +311,108 @@
       "CMIP6.ScenarioMIP.CMCC.CMCC-ESM2.ssp370.r1i1p1f1.Omon.tos.gn.v20210202|esgf-node2.cmcc.it downloading\n",
       "CMIP6.ScenarioMIP.CMCC.CMCC-ESM2.ssp370.r1i1p1f1.Omon.tos.gn.v20210202|esgf-data3.ceda.ac.uk downloading\n",
       "11['CNRM-CERFACS' 'CNRM-CM6-1' 'r1i1p1f2' 'r1i1p1f2']\n",
-      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|aims3.llnl.gov downloading\n"
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|aims3.llnl.gov downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-CM6-1.piControl.r1i1p1f2.Omon.tos.gn.v20180814|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-CM6-1.ssp370.r1i1p1f2.Omon.tos.gn.v20190219|esgf-data3.ceda.ac.uk downloading\n",
+      "12['CNRM-CERFACS' 'CNRM-ESM2-1' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|aims3.llnl.gov downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.CNRM-CERFACS.CNRM-ESM2-1.piControl.r1i1p1f2.Omon.tos.gn.v20181115|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp126.r1i1p1f2.Omon.tos.gn.v20190328|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp245.r1i1p1f2.Omon.tos.gn.v20190328|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp370.r1i1p1f2.Omon.tos.gn.v20191021|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp370.r1i1p1f2.Omon.tos.gn.v20191021|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp370.r1i1p1f2.Omon.tos.gn.v20191021|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp370.r1i1p1f2.Omon.tos.gn.v20191021|esg1.umr-cnrm.fr downloading\n",
+      "CMIP6.ScenarioMIP.CNRM-CERFACS.CNRM-ESM2-1.ssp370.r1i1p1f2.Omon.tos.gn.v20191021|esgf-data3.ceda.ac.uk downloading\n",
+      "13['CCCma' 'CanESM5' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5.piControl.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp126.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|aims3.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp245.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5.ssp370.r1i1p1f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "14['CCCma' 'CanESM5-CanOE' 'r1i1p2f1' 'r1i1p2f1']\n",
+      "CMIP6.CMIP.CCCma.CanESM5-CanOE.piControl.r1i1p2f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5-CanOE.piControl.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5-CanOE.piControl.r1i1p2f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.CCCma.CanESM5-CanOE.piControl.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp126.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp126.r1i1p2f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp126.r1i1p2f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp126.r1i1p2f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp126.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp245.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp245.r1i1p2f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp245.r1i1p2f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp245.r1i1p2f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp245.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp370.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp370.r1i1p2f1.Omon.tos.gn.v20190429|crd-esgf-drc.ec.gc.ca downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp370.r1i1p2f1.Omon.tos.gn.v20190429|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp370.r1i1p2f1.Omon.tos.gn.v20190429|esgf.nci.org.au downloading\n",
+      "CMIP6.ScenarioMIP.CCCma.CanESM5-CanOE.ssp370.r1i1p2f1.Omon.tos.gn.v20190429|esgf-data3.ceda.ac.uk downloading\n",
+      "15['EC-Earth-Consortium' 'EC-Earth3' 'r1i1p1f1' 'r1i1p1f1']\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3.piControl.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3.piControl.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3.piControl.r1i1p1f1.Omon.tos.gn.v20200918|esg-dn2.nsc.liu.se downloading\n",
+      "CMIP6.CMIP.EC-Earth-Consortium.EC-Earth3.piControl.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp126.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp126.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp126.r1i1p1f1.Omon.tos.gn.v20200918|esgf3.dkrz.de downloading\n",
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp126.r1i1p1f1.Omon.tos.gn.v20200918|esg-dn2.nsc.liu.se downloading\n",
+      "CMIP6.ScenarioMIP.EC-Earth-Consortium.EC-Earth3.ssp126.r1i1p1f1.Omon.tos.gn.v20200918|esgf-data3.ceda.ac.uk downloading\n"
      ]
     }
    ],
