--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sstAnoms(tsXr):\n",
+    "def sstAnoms(tsXr, climatXr):\n",
     "    \n",
     "    tsXr=tsXr.where(\n",
     "        (tsXr.lat>=-15) & (tsXr.lat<=15) &\n",
@@ -45,9 +45,12 @@
     "        drop=True\n",
     "    )\n",
     "    \n",
-    "    tsXr=tsXr.where(\n",
-    "        (tsXr.time.dt.year>=1900) * (tsXr.time.dt.year<2100), \n",
-    "        drop=True)\n",
+    "    climatXr=climatXr.where(\n",
+    "        (climatXr.lat>=-15) & (climatXr.lat<=15) &\n",
+    "        (climatXr.lon>=140) & (climatXr.lon<=280),\n",
+    "        drop=True\n",
+    "    )\n",
+    "\n",
     "\n",
     "    trendXr = tsXr.polyfit('time', 2)\n",
     "    \n",
@@ -55,8 +58,7 @@
     "    \n",
     "    detrendXr=tsXr-trendXr\n",
     "    \n",
-    "    sstMeanXr=detrendXr.where((detrendXr.time.dt.year>=1900) * (detrendXr.time.dt.year<2000), \n",
-    "            drop=True).groupby('time.month').mean(dim='time')\n",
+    "    sstMeanXr=climatXr.groupby('time.month').mean(dim='time')\n",
     "    \n",
     "    sstAnomXr=detrendXr.groupby('time.month')-sstMeanXr\n",
     "    \n",
@@ -71,9 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eofSolver(tsXr): \n",
-    "    \n",
-    "    sstAnomXr=sstAnoms(tsXr)\n",
+    "def eofSolver(sstAnomXr): \n",
     "    \n",
     "    sstAnomXr.load()\n",
     "    \n",
@@ -90,15 +90,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ecIndex(tsXr):\n",
-    "    \n",
-    "    solver=eofSolver(tsXr)\n",
-    "    \n",
+    "def ecIndex(tsXr, climatXr):\n",
     "    import numpy.polynomial as poly\n",
+    "    \n",
+    "    \n",
+    "    sstAnomXr=sstAnoms(tsXr, climatXr)\n",
+    "    solver=eofSolver(sstAnomXr)\n",
     "    pcTimeXr=solver.pcs(npcs=2, pcscaling=1)\n",
     "    \n",
-    "    djfTimeXr=pcTimeXr.where((pcTimeXr.time.dt.month==12)+(\n",
-    "        pcTimeXr.time.dt.month==1)+(pcTimeXr.time.dt.month==2), drop=True)\n",
+    "    djfAnomXr=tp.averageForTimePeriod(\n",
+    "            sstAnomXr.to_dataset(name='enso')).rename({'year':'time'}).to_array()\n",
+    "    solver=eofSolver(djfAnomXr)\n",
+    "    djfPcXr=solver.pcs(npcs=2, pcscaling=1)\n",
+    "    \n",
     "    \n",
     "    pc1 = pcTimeXr.sel(mode=0)\n",
     "    pc2 = pcTimeXr.sel(mode=1)\n",
@@ -107,6 +111,9 @@
     "    alpha = pFit.convert().coef[2]\n",
     "    \n",
     "    eofsXr = solver.eofsAsCorrelation()\n",
+    "    \n",
+    "    pFitDjf = poly.Polynomial.fit(djfPcXr.sel(mode=0), djfPcXr.sel(mode=1), 2)\n",
+    "    alphaDjf = pFitDjf.convert().coef[2]\n",
     "    \n",
     "    if alpha >0:\n",
     "        pc1=pc1*-1\n",
@@ -120,6 +127,9 @@
     "                               -1*eofsXr.sel(mode=1)], \n",
     "                               'mode')\n",
     "        \n",
+    "        pFitDjf = poly.Polynomial.fit(-1*djfPcXr.sel(mode=0), -1*djfPcXr.sel(mode=1), 2)\n",
+    "        alphaDjf = pFitDjf.convert().coef[2]\n",
+    "        \n",
     "    cXr=(pcTimeXr.sel(mode=0)+pcTimeXr.sel(mode=1))/numpy.sqrt(2)\n",
     "    eXr=(pcTimeXr.sel(mode=0)-pcTimeXr.sel(mode=1))/numpy.sqrt(2)\n",
     "        \n",
@@ -128,6 +138,7 @@
     "                            eXr.rename('eIndex'),\n",
     "                            cXr.rename('cIndex')])\n",
     "    indeces['alpha']=alpha\n",
+    "    indeces['alphaDjf']=alphaDjf\n",
     "    \n",
     "    return indeces, pFit, eofsXr"
    ]
