--- a/utils/ecIndex.ipynb
+++ b/utils/ecIndex.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c73c34-6c59-4ff4-a8fc-cc6c95aa1f65",
    "metadata": {
     "tags": []
    },
@@ -19,7 +18,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aead9f8c-d555-4ec3-94a5-ed203ab1fdcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +31,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79761062-03f9-440a-9e2f-42897c2c399c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sstAnoms(tsXr, climatXr):\n",
+    "def anoms(xr):\n",
+    "    mean=xr.where((xr.time.dt.year>=1900) * (xr.time.dt.year<2000), \n",
+    "                             drop=True).mean(dim='time')\n",
+    "    return xr-mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sstAnoms(tsXr):\n",
     "    \n",
     "    tsXr=tsXr.where(\n",
     "        (tsXr.lat>=-15) & (tsXr.lat<=15) &\n",
@@ -45,22 +54,19 @@
     "        drop=True\n",
     "    )\n",
     "    \n",
-    "    climatXr=climatXr.where(\n",
-    "        (climatXr.lat>=-15) & (climatXr.lat<=15) &\n",
-    "        (climatXr.lon>=140) & (climatXr.lon<=280),\n",
-    "        drop=True\n",
-    "    )\n",
-    "\n",
-    "\n",
     "    trendXr = tsXr.polyfit('time', 2)\n",
     "    \n",
     "    trendXr = xarray.polyval(tsXr.time, trendXr.polyfit_coefficients, 'degree')\n",
     "    \n",
     "    detrendXr=tsXr-trendXr\n",
     "    \n",
-    "    sstMeanXr=climatXr.groupby('time.month').mean(dim='time')\n",
+    "    #climatXr=detrendXr.where((detrendXr.time.dt.year>=1900) * (detrendXr.time.dt.year<2000), \n",
+    "    #                         drop=True)\n",
+    "\n",
     "    \n",
-    "    sstAnomXr=detrendXr.groupby('time.month')-sstMeanXr\n",
+    "    #sstMeanXr=climatXr.groupby('time.month').mean(dim='time').load()\n",
+    "    \n",
+    "    sstAnomXr=detrendXr.groupby('time.month').apply(anoms)\n",
     "    \n",
     "    return sstAnomXr\n",
     "    \n"
@@ -69,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de03fb36-50d6-4b44-b0f9-03fbbcba35e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,20 +91,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ba0082-e84f-4033-b153-65d5dbe0b263",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ecIndex(tsXr, climatXr):\n",
+    "def ecIndex(sstAnomXr):\n",
     "    import numpy.polynomial as poly\n",
     "    \n",
     "    \n",
-    "    sstAnomXr=sstAnoms(tsXr, climatXr)\n",
     "    solver=eofSolver(sstAnomXr)\n",
     "    pcTimeXr=solver.pcs(npcs=2, pcscaling=1)\n",
     "    \n",
     "    djfAnomXr=tp.averageForTimePeriod(\n",
-    "            sstAnomXr.to_dataset(name='enso')).rename({'year':'time'}).to_array()\n",
+    "            sstAnomXr.to_dataset(name='enso')).rename({'year':'time'}).enso\n",
+    "\n",
     "    solver=eofSolver(djfAnomXr)\n",
     "    djfPcXr=solver.pcs(npcs=2, pcscaling=1)\n",
     "    \n",
@@ -146,7 +150,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a030708-db93-4ac6-b120-47c89c11e641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
